Extend dynamic templates to make them define runtime fields (#66112)
Runtime fields are defined as part of the runtime section in the mappings. Dynamic templates allow to specify mappings for fields that are getting automatically created. With this change, we allow users to create dynamic under the runtime section, and optionally define their mappings.

The following is an example of dynamic template that matches any incoming long field as runtime field, meaning they will all be evaluated at runtime. When a script is not specified, runtime fields are loaded from a field with the same name in _source.

```
{
  "mappings": {
    "dynamic_templates": [
      {
        "long_as_runtime": {
          "match_mapping_type": "long",
          "runtime": {

          }
        }
      }
    ]
  }
}
```

* fix test

* fix indentation

* missing break was causing needless deprecation warnings