@@ -310,8 +310,35 @@ public class RootObjectMapperTests extends MapperServiceTestCase {
         MapperService mapperService = createMapperService(mapping);
         assertThat(mapperService.documentMapper().mappingSource().toString(), containsString("\"type\":\"string\""));
         assertWarnings("dynamic template [my_template] has invalid content [{\"match_mapping_type\":\"string\",\"mapping\":{\"type\":" +
-            "\"string\"}}], attempted to validate it with the following match_mapping_type: [[string]], " +
+            "\"string\"}}], attempted to validate it with the following match_mapping_type: [string], " +
             "caused by [No mapper found for type [string]]");
+    }
+
+    public void testIllegalDynamicTemplateUnknownRuntimeFieldType() throws Exception {
+        XContentBuilder mapping = XContentFactory.jsonBuilder();
+        mapping.startObject();
+        {
+            mapping.startObject(MapperService.SINGLE_MAPPING_NAME);
+            mapping.startArray("dynamic_templates");
+            {
+                mapping.startObject();
+                mapping.startObject("my_template");
+                mapping.field("match_mapping_type", "string");
+                mapping.startObject("runtime");
+                mapping.field("type", "unknown");
+                mapping.endObject();
+                mapping.endObject();
+                mapping.endObject();
+            }
+            mapping.endArray();
+            mapping.endObject();
+        }
+        mapping.endObject();
+        createMapperService(mapping);
+        assertWarnings("dynamic template [my_template] has invalid content [" +
+            "{\"match_mapping_type\":\"string\",\"runtime\":{\"type\":\"unknown\"}}], " +
+            "attempted to validate it with the following match_mapping_type: [string], " +
+            "caused by [No runtime field found for type [unknown]]");
     }
 
     public void testIllegalDynamicTemplateUnknownAttribute() throws Exception {
@@ -340,8 +367,36 @@ public class RootObjectMapperTests extends MapperServiceTestCase {
         assertThat(mapperService.documentMapper().mappingSource().toString(), containsString("\"foo\":\"bar\""));
         assertWarnings("dynamic template [my_template] has invalid content [{\"match_mapping_type\":\"string\",\"mapping\":{" +
             "\"foo\":\"bar\",\"type\":\"keyword\"}}], " +
-            "attempted to validate it with the following match_mapping_type: [[string]], " +
+            "attempted to validate it with the following match_mapping_type: [string], " +
             "caused by [unknown parameter [foo] on mapper [__dynamic__my_template] of type [keyword]]");
+    }
+
+    public void testIllegalDynamicTemplateUnknownAttributeRuntime() throws Exception {
+        XContentBuilder mapping = XContentFactory.jsonBuilder();
+        mapping.startObject();
+        {
+            mapping.startObject(MapperService.SINGLE_MAPPING_NAME);
+            mapping.startArray("dynamic_templates");
+            {
+                mapping.startObject();
+                mapping.startObject("my_template");
+                mapping.field("match_mapping_type", "string");
+                mapping.startObject("runtime");
+                mapping.field("type", "test");
+                mapping.field("foo", "bar");
+                mapping.endObject();
+                mapping.endObject();
+                mapping.endObject();
+            }
+            mapping.endArray();
+            mapping.endObject();
+        }
+        mapping.endObject();
+
+        createMapperService(mapping);
+        assertWarnings("dynamic template [my_template] has invalid content [" +
+            "{\"match_mapping_type\":\"string\",\"runtime\":{\"foo\":\"bar\",\"type\":\"test\"}}], " +
+            "attempted to validate it with the following match_mapping_type: [string], caused by [Unknown mapping attributes [{foo=bar}]]");
     }
 
     public void testIllegalDynamicTemplateInvalidAttribute() throws Exception {
@@ -369,7 +424,7 @@ public class RootObjectMapperTests extends MapperServiceTestCase {
         MapperService mapperService = createMapperService(mapping);
         assertThat(mapperService.documentMapper().mappingSource().toString(), containsString("\"analyzer\":\"foobar\""));
         assertWarnings("dynamic template [my_template] has invalid content [{\"match_mapping_type\":\"string\",\"mapping\":{" +
-            "\"analyzer\":\"foobar\",\"type\":\"text\"}}], attempted to validate it with the following match_mapping_type: [[string]], " +
+            "\"analyzer\":\"foobar\",\"type\":\"text\"}}], attempted to validate it with the following match_mapping_type: [string], " +
             "caused by [analyzer [foobar] has not been configured in mappings]");
     }
 
@@ -436,16 +491,53 @@ public class RootObjectMapperTests extends MapperServiceTestCase {
                 assertWarnings("dynamic template [my_template] has invalid content [{\"match_mapping_type\":\"*\",\"mapping\":{" +
                     "\"foo\":\"bar\",\"type\":\"{dynamic_type}\"}}], " +
                     "attempted to validate it with the following match_mapping_type: " +
-                    "[[object, string, long, double, boolean, date, binary]], " +
+                    "[object, string, long, double, boolean, date, binary], " +
                     "caused by [unknown parameter [foo] on mapper [__dynamic__my_template] of type [binary]]");
             } else {
                 assertWarnings("dynamic template [my_template] has invalid content [{\"match\":\"string_*\",\"mapping\":{" +
                     "\"foo\":\"bar\",\"type\":\"{dynamic_type}\"}}], " +
                     "attempted to validate it with the following match_mapping_type: " +
-                    "[[object, string, long, double, boolean, date, binary]], " +
+                    "[object, string, long, double, boolean, date, binary], " +
                     "caused by [unknown parameter [foo] on mapper [__dynamic__my_template] of type [binary]]");
             }
         }
+    }
+
+    public void testIllegalDynamicTemplateNoMappingTypeRuntime() throws Exception {
+        XContentBuilder mapping = XContentFactory.jsonBuilder();
+        String matchError;
+        mapping.startObject();
+        {
+            mapping.startObject(MapperService.SINGLE_MAPPING_NAME);
+            mapping.startArray("dynamic_templates");
+            {
+                mapping.startObject();
+                mapping.startObject("my_template");
+                if (randomBoolean()) {
+                    mapping.field("match_mapping_type", "*");
+                    matchError = "\"match_mapping_type\":\"*\"";
+                } else {
+                    mapping.field("match", "string_*");
+                    matchError = "\"match\":\"string_*\"";
+                }
+                mapping.startObject("runtime");
+                mapping.field("type", "{dynamic_type}");
+                mapping.field("foo", "bar");
+                mapping.endObject();
+                mapping.endObject();
+                mapping.endObject();
+            }
+            mapping.endArray();
+            mapping.endObject();
+        }
+        mapping.endObject();
+
+        createMapperService(mapping);
+        String expected = "dynamic template [my_template] has invalid content [{" + matchError +
+            ",\"runtime\":{\"foo\":\"bar\",\"type\":\"{dynamic_type}\"}}], " +
+            "attempted to validate it with the following match_mapping_type: [string, long, double, boolean, date], " +
+            "caused by [Unknown mapping attributes [{foo=bar}]]";
+        assertWarnings(expected);
     }
 
     public void testIllegalDynamicTemplatePre7Dot7Index() throws Exception {
@@ -595,9 +687,9 @@ public class RootObjectMapperTests extends MapperServiceTestCase {
     }
 
     public void testRuntimeSectionNonRuntimeType() throws IOException {
-        XContentBuilder mapping = runtimeFieldMapping(builder -> builder.field("type", "keyword"));
+        XContentBuilder mapping = runtimeFieldMapping(builder -> builder.field("type", "unknown"));
         MapperParsingException e = expectThrows(MapperParsingException.class, () -> createMapperService(mapping));
-        assertEquals("Failed to parse mapping [_doc]: No handler for type [keyword] declared on runtime field [field]", e.getMessage());
+        assertEquals("Failed to parse mapping [_doc]: No handler for type [unknown] declared on runtime field [field]", e.getMessage());
     }
 
     public void testRuntimeSectionHandlerNotFound() throws IOException {
@@ -650,11 +742,16 @@ public class RootObjectMapperTests extends MapperServiceTestCase {
     private static class RuntimeFieldPlugin extends Plugin implements MapperPlugin {
         @Override
         public Map<String, RuntimeFieldType.Parser> getRuntimeFieldTypes() {
-            return Collections.singletonMap("test", (name, node, parserContext) -> {
+            return org.elasticsearch.common.collect.Map.of("test", (name, node, parserContext) -> {
                 Object prop1 = node.remove("prop1");
                 Object prop2 = node.remove("prop2");
                 return new RuntimeField(name, prop1 == null ? null : prop1.toString(), prop2 == null ? null : prop2.toString());
-            });
+            },
+                "keyword", (name, node, parserContext) -> new TestRuntimeField(name, "keyword"),
+                "boolean", (name, node, parserContext) -> new TestRuntimeField(name, "boolean"),
+                "long", (name, node, parserContext) -> new TestRuntimeField(name, "long"),
+                "double", (name, node, parserContext) -> new TestRuntimeField(name, "double"),
+                "date", (name, node, parserContext) -> new TestRuntimeField(name, "date"));
         }
     }
 
